--- a/idolsns/pom.xml
+++ b/idolsns/pom.xml
@@ -18,6 +18,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		
+		<!-- webflux -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		
 		<!-- actuator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
