--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-spring.datasource.username=finala
-spring.datasource.password=finala
+spring.datasource.username=final
+spring.datasource.password=final
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
