--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -63,6 +63,7 @@ custom.filedir.path=D:/final
 # custom.email.username=
 # custom.email.password=
 
+
 # payment data
-# custom.kakaopay.cid=TC0ONETIME
-# custom.kakaopay.key=
+custom.kakaopay.cid=TC0ONETIME
+custom.kakaopay.key=00fea220b5d18b45abe34903601c2c56
