--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-spring.datasource.username=kh11
-spring.datasource.password=kh11
+spring.datasource.username=finala
+spring.datasource.password=finala
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
@@ -19,8 +19,8 @@ management.endpoints.web.exposure.include=mappings,beans,env
 
 # file upload setting (multipart resolver)
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=100MB
 
 # 404 error setting + static resource path setting
 spring.mvc.throw-exception-if-no-handler-found=true 
@@ -54,7 +54,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-custom.filedir.path=D:/final
+custom.filedir.path=C:/finala/upload
 #custom.fileupload.path=C:/upload/kh11
 
 # custom setting
