--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
-logging.level.com.hacademy=debug
+logging.level.com.kh=debug
 logging.level.member=debug
 logging.level.post=debug
 logging.level.report=debug
