프론트 뷰로 변경 중

--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -35,6 +35,8 @@ logging.level.com.kh=debug
 logging.level.member=debug
 logging.level.post=debug
 logging.level.report=debug
+logging.level.chatRoom=debug
+logging.level.chatJoin=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
