--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -37,6 +37,8 @@ logging.level.post=debug
 logging.level.report=debug
 logging.level.chatRoom=debug
 logging.level.chatJoin=debug
+logging.level.chatMessage=debug
+logging.level.chatRead=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
