--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.servlet.multipart.max-request-size=10MB
 spring.mvc.throw-exception-if-no-handler-found=true 
 #spring.web.resources.add-mappings=false
 
-spring.mvc.static-path-pattern=/static/**
-spring.web.resources.static-locations=classpath:/static/
+#spring.mvc.static-path-pattern=/static/**
+#spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
@@ -61,10 +61,10 @@ custom.filedir.path=D:/final
 #custom.fileupload.path=C:/upload/kh11
 
 # custom setting
-# custom.email.host=smtp.gmail.com
-# custom.email.port=587
-# custom.email.username=
-# custom.email.password=
+custom.email.host=smtp.gmail.com
+custom.email.port=587
+custom.email.username=mye01226@gmail.com
+custom.email.password=zzxaqlnkuciuelra
 
 
 # payment data
