--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -66,6 +66,16 @@ custom.filedir.path=D:/final
 # custom.email.username=
 # custom.email.password=
 
+# custom homepage setting
+custom.homepage.SANCTION_CRITERIA_TOTAL_1=3
+custom.homepage.SANCTION_CRITERIA_TOTAL_2=200
+custom.homepage.SANCTION_CRITERIA_TOTAL_3=300
+custom.homepage.SANCTION_CRITERIA_MONTH=30
+
+custom.homepage.SANCTION_TERM_TOTAL_1=7
+custom.homepage.SANCTION_TERM_TOTAL_2=30
+custom.homepage.SANCTION_TERM_TOTAL_3=365
+custom.homepage.SANCTION_TERM_MONTH=7
 
 # payment data
 custom.kakaopay.cid=TC0ONETIME
