--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -36,6 +36,7 @@ logging.level.member=debug
 logging.level.post=debug
 logging.level.payment=debug
 logging.level.report=debug
+logging.level.fund=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
