--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.servlet.multipart.max-request-size=25MB
 spring.mvc.throw-exception-if-no-handler-found=true 
 #spring.web.resources.add-mappings=false
 
-#spring.mvc.static-path-pattern=/static/**
-#spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
@@ -72,7 +72,7 @@ custom.email.username=mye01226@gmail.com
 custom.email.password=zzxaqlnkuciuelra
 
 # custom homepage setting
-custom.homepage.SANCTION_CRITERIA_TOTAL_1=3
+custom.homepage.SANCTION_CRITERIA_TOTAL_1=5
 custom.homepage.SANCTION_CRITERIA_TOTAL_2=200
 custom.homepage.SANCTION_CRITERIA_TOTAL_3=300
 custom.homepage.SANCTION_CRITERIA_MONTH=30
