--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.servlet.multipart.max-request-size=25MB
 spring.mvc.throw-exception-if-no-handler-found=true 
 #spring.web.resources.add-mappings=false
 
-#spring.mvc.static-path-pattern=/static/**
-#spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=error
