--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -63,6 +63,8 @@ spring.mvc.view.suffix=.jsp
 
 # file-directory setting
 custom.filedir.path=D:/final
+# Mac OS
+#custom.filedir.path=/Users/macbook_id/upload/ 
 #custom.fileupload.path=C:/upload/kh11
 
 # custom setting
