--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -42,6 +42,7 @@ logging.level.chatJoin=debug
 logging.level.chatMessage=debug
 logging.level.chatRead=debug
 logging.level.chatRoomPriv=debug
+logging.level.attachment=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
