--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -36,6 +36,7 @@ logging.level.member=debug
 logging.level.post=debug
 logging.level.payment=debug
 logging.level.report=debug
+logging.level.follow=debug
 logging.level.fund=debug
 logging.level.chatRoom=debug
 logging.level.chatJoin=debug
