--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -37,6 +37,7 @@ logging.level.post=debug
 logging.level.payment=debug
 logging.level.report=debug
 logging.level.fund=debug
+logging.level.postLike=debug
 logging.level.chatRoom=debug
 logging.level.chatJoin=debug
 logging.level.chatMessage=debug
