--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -64,9 +64,9 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-custom.filedir.path=D:/final
+#custom.filedir.path=D:/final
 # Mac OS
-#custom.filedir.path=/Users/macbook_id/upload/ 
+custom.filedir.path=/Users/tommy/upload/ 
 #custom.fileupload.path=C:/upload/kh11
 
 # custom setting
