--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -32,34 +32,19 @@ spring.web.resources.static-locations=classpath:/static/
 # logging
 logging.level.root=error
 logging.level.com.kh=debug
-<<<<<<< HEAD
 #logging.level.member=debug
 #logging.level.post=debug
 #logging.level.payment=debug
 #logging.level.report=debug
 #logging.level.follow=debug
 #logging.level.fund=debug
+#logging.level.postLike=debug
 #logging.level.chatRoom=debug
 #logging.level.chatJoin=debug
 #logging.level.chatMessage=debug
 #logging.level.chatRead=debug
 #logging.level.chatRoomPriv=debug
 #logging.level.attachment=debug
-=======
-logging.level.member=debug
-logging.level.post=debug
-logging.level.payment=debug
-logging.level.report=debug
-logging.level.follow=debug
-logging.level.fund=debug
-logging.level.postLike=debug
-logging.level.chatRoom=debug
-logging.level.chatJoin=debug
-logging.level.chatMessage=debug
-logging.level.chatRead=debug
-logging.level.chatRoomPriv=debug
-logging.level.attachment=debug
->>>>>>> refs/remotes/origin/main
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
