--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -30,21 +30,21 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # logging
-#logging.level.root=error
-#logging.level.com.kh=debug
-#logging.level.member=debug
-#logging.level.post=debug
-#logging.level.payment=debug
-#logging.level.report=debug
-#logging.level.follow=debug
-#logging.level.fund=debug
-#logging.level.postLike=debug
-#logging.level.chatRoom=debug
-#logging.level.chatJoin=debug
-#logging.level.chatMessage=debug
-#logging.level.chatRead=debug
-#logging.level.chatRoomPriv=debug
-#logging.level.attachment=debug
+logging.level.root=error
+logging.level.com.kh=debug
+logging.level.member=debug
+logging.level.post=debug
+logging.level.payment=debug
+logging.level.report=debug
+logging.level.follow=debug
+logging.level.fund=debug
+logging.level.postLike=debug
+logging.level.chatRoom=debug
+logging.level.chatJoin=debug
+logging.level.chatMessage=debug
+logging.level.chatRead=debug
+logging.level.chatRoomPriv=debug
+logging.level.attachment=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
