--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -67,7 +67,7 @@ spring.mvc.view.suffix=.jsp
 
 # file-directory setting
 #custom.filedir.path=D:/final
-custom.filedir.path=C:/final
+custom.filedir.path=D:/final
 # Mac OS
 #custom.filedir.path=/Users/tommy/upload/ 
 #custom.fileupload.path=C:/upload/kh11
