--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -45,6 +45,7 @@ logging.level.com.kh=debug
 #logging.level.chatRead=debug
 #logging.level.chatRoomPriv=debug
 #logging.level.attachment=debug
+logging.level.simpleProfile=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
