검색기능 보완

--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.web.resources.static-locations=classpath:/static/
 # logging
 logging.level.root=error
 logging.level.com.kh=debug
-#logging.level.member=debug
+logging.level.artist=debug
 #logging.level.post=debug
 #logging.level.payment=debug
 #logging.level.report=debug
@@ -45,7 +45,7 @@ logging.level.com.kh=debug
 #logging.level.chatRead=debug
 #logging.level.chatRoomPriv=debug
 #logging.level.attachment=debug
-logging.level.simpleProfile=debug
+# logging.level.simpleProfile=debug
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
 #logging.pattern.file=[%-5level] [%d{yyyy-MM-dd HH:mm:ss.S}] %c - %msg %n
