--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -80,15 +80,15 @@ custom.email.username=mye01226@gmail.com
 custom.email.password=zzxaqlnkuciuelra
 
 # custom homepage setting
-custom.homepage.SANCTION_CRITERIA_TOTAL_1=5
-custom.homepage.SANCTION_CRITERIA_TOTAL_2=200
-custom.homepage.SANCTION_CRITERIA_TOTAL_3=300
-custom.homepage.SANCTION_CRITERIA_MONTH=30
+# custom.homepage.SANCTION_CRITERIA_TOTAL_1=5
+# custom.homepage.SANCTION_CRITERIA_TOTAL_2=200
+# custom.homepage.SANCTION_CRITERIA_TOTAL_3=300
+# custom.homepage.SANCTION_CRITERIA_MONTH=30
 
-custom.homepage.SANCTION_TERM_TOTAL_1=7
-custom.homepage.SANCTION_TERM_TOTAL_2=30
-custom.homepage.SANCTION_TERM_TOTAL_3=365
-custom.homepage.SANCTION_TERM_MONTH=7
+# custom.homepage.SANCTION_TERM_TOTAL_1=7
+# custom.homepage.SANCTION_TERM_TOTAL_2=30
+# custom.homepage.SANCTION_TERM_TOTAL_3=365
+# custom.homepage.SANCTION_TERM_MONTH=7
 
 # payment data
 custom.kakaopay.cid=TC0ONETIME
