--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -69,10 +69,10 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-#custom.filedir.path=D:/final
+custom.filedir.path=D:/final
 #custom.filedir.path=C:/final
 # Mac OS
-custom.filedir.path=/Users/tommy/upload/ 
+#custom.filedir.path=/Users/tommy/upload/ 
 #custom.fileupload.path=C:/upload/kh11
 
 # custom setting
