일단 커밋해 그리고 생각해

--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -30,15 +30,15 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # logging
-logging.level.root=error
-logging.level.com.kh=debug
+#logging.level.root=error
+#logging.level.com.kh=debug
 #logging.level.member=debug
 #logging.level.post=debug
 #logging.level.payment=debug
 #logging.level.report=debug
 #logging.level.follow=debug
 #logging.level.fundpostinte=debug
-logging.level.postShow=debug
+#logging.level.postShow=debug
 #logging.level.postLike=debug
 #logging.level.chatRoom=debug
 #logging.level.chatJoin=debug
