관리자페이지 페이지네이션

--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.web.resources.static-locations=classpath:/static/
 #logging.level.chatRoomPriv=debug
 #logging.level.attachment=debug
 # logging.level.simpleProfile=debug
-# logging.level.fundpostinte=debug
+logging.level.search=debug
 
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
