계정정보 수정

--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.servlet.context-path=/starlink
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
 spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-spring.datasource.username=kh11a
-spring.datasource.password=kh11a
+spring.datasource.username=kh11fa
+spring.datasource.password=kh11fa
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
@@ -75,7 +75,7 @@ spring.mvc.view.suffix=.jsp
 #custom.filedir.path=C:/final
 # Mac OS
 #custom.filedir.path=/Users/tommy/upload/ 
-custom.filedir.path=C:/upload/kh11a
+custom.filedir.path=C:/upload/kh11fa
 
 # custom setting
 custom.email.host=smtp.gmail.com
