--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
 server.port=8080
-# server.servlet.context-path=/starlink
+server.servlet.context-path=/starlink
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -35,6 +35,7 @@ spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=WARN
+logging.level.fixedTag=DEBUG
 
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
