외부설정 파일 수정

--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # server setting
 server.port=8080
-server.servlet.context-path=/starlink
+# server.servlet.context-path=/starlink
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
-# spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-# spring.datasource.username=kh11fa
-# spring.datasource.password=kh11fa
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=finala
-spring.datasource.password=finala
+spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
+spring.datasource.username=kh11fa
+spring.datasource.password=kh11fa
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# spring.datasource.username=finala
+# spring.datasource.password=finala
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
@@ -35,7 +35,6 @@ spring.web.resources.static-locations=classpath:/static/
 
 # logging
 logging.level.root=WARN
-logging.level.fixedTag=DEBUG
 
 logging.pattern.console=[%-5level] %msg - %c [%d{yyyy-MM-dd HH:mm:ss.S}] %n
 
