--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # server setting
-server.port=8080
+server.port=80
 # server.servlet.context-path=/starlink
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
-# spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
-# spring.datasource.username=kh11fa
-# spring.datasource.password=kh11fa
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11fa
 spring.datasource.password=kh11fa
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+# spring.datasource.username=kh11fa
+# spring.datasource.password=kh11fa
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
