--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
 server.port=80
-# server.servlet.context-path=/starlink
+server.servlet.context-path=/starlink
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
