--- a/idolsns/src/main/resources/application.properties
+++ b/idolsns/src/main/resources/application.properties
@@ -57,8 +57,11 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # file-directory setting
-custom.filedir.path=D:/final
-#custom.fileupload.path=C:/upload/kh11
+#custom.filedir.path=D:/final
+#custom.filedir.path=C:/final
+# Mac OS
+#custom.filedir.path=/Users/tommy/upload/ 
+custom.filedir.path=C:/upload/kh11fa
 
 # custom setting
 custom.email.host=smtp.gmail.com
